# Color

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TarzaNN3_0.cbp  cmake_install.cmake  moc_ConnectionGUI.cpp  moc_NetworkWindow.cpp  moc_SheetImage.cpp  tarzann_automoc.cpp
doc/: TarzaNN_Installation.txt
examples/color_model/: ._run_single_hue_color.sh  CMakeLists.txt  LGN_weights.txt  Makefile  Readme.md  V4_weights.txt  cmake_install.cmake  color_model  color_model.cbp  full_network_test_hue.cpp  full_network_test_hue.cpp.save  run_color_model.sh
examples/color_model/data/single_hue_stimuli/: ._hue_270
include/tarzann/: Array2D.h  Common.h  ComputeStrategy.h  Connection.h  ControlSignalGenerator.h  Debug.h  FeaturalReceptiveField.h  Filter.h  FilterDoG.h  FilterGabor.h  FilterGaussian.h  FilterIdentity.h  FilterType.h  GammaUnits.h  GatingSignal.h  Layer.h  Matrix.h  Neuron.h  NeuronLinear.h  NeuronLinear2.h  NeuronST.h  NeuronST1.h  NeuronSigmoid.h  NeuronType.h  PLattice.h  Probe.h  ReceptiveField.h  RetinalLayer.h  Sheet.h  SheetType.h  Stimulus.h  XMLConfig.h
include/tarzann_gui/: ConnectionGUI.h  GUI_config.h  NetworkWindow.h  PLatticeGUI.h  SheetImage.h
src/tarzann/: ComputeStrategy.cpp  Connection.cpp  ControlSignalGenerator.cpp  Filter.cpp  FilterDoG.cpp  FilterGabor.cpp  FilterGaussian.cpp  FilterIdentity.cpp  GammaUnits.cpp  GatingSignal.cpp  Layer.cpp  Matrix.cpp  Neuron.cpp  NeuronLinear.cpp  NeuronLinear2.cpp  NeuronST.cpp  NeuronST1.cpp  NeuronSigmoid.cpp  PLattice.cpp  Probe.cpp  ReceptiveField.cpp  RetinalLayer.cpp  Sheet.cpp  Stimulus.cpp
src/tarzann_gui/: ConnectionGUI.cpp  NetworkWindow.cpp  PLatticeGUI.cpp  SheetImage.cpp
